--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "dlmm-saros-sdk",
+  "name": "@saros-finance/dlmm-sdk",
   "version": "1.0.0",
   "description": "DLMM Saros SDK",
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "ThanhHlb",
+  "author": "Saros Finance",
   "license": "ISC",
   "dependencies": {
     "@coral-xyz/anchor": "0.31.1",
