--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "@saros-finance/dlmm-sdk",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
-  "main": "index.ts",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "tsdx watch --entry index.ts",
+    "build": "tsdx build --entry index.ts",
+    "lint": "tsdx lint",
+    "prepare": "tsdx build"
   },
   "author": "Saros Finance",
   "license": "ISC",
@@ -16,7 +20,8 @@
     "@solana/web3.js": "1.98.2",
     "bs58": "^6.0.0",
     "js-big-decimal": "^2.2.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "tsdx": "^0.14.1"
   },
   "devDependencies": {
     "@types/jsdom": "^21.1.7",
