--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "tsdx watch --entry index.ts",
     "build": "tsdx build --entry index.ts",
     "lint": "tsdx lint",
@@ -27,7 +27,9 @@
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
+    "@vitest/ui": "^3.2.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
