--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
   "scripts": {
+    "prettier": "prettier --write \"**/*.{ts,tsx}\"",
     "test": "vitest",
     "start": "tsdx watch --entry index.ts",
     "build": "tsdx build --entry index.ts",
