--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "tsdx watch --entry index.ts",
     "build": "tsdx build --entry index.ts",
     "lint": "tsdx lint .",
-    "prepare": "tsdx build --entry index.ts"
+    "prepare": "tsdx build --entry index.ts",
+    "test": "vitest"
   },
   "author": "Saros Finance",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "@types/lodash": "^4.17.17",
     "@types/node": "^22.15.21",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "vitest": "^3.2.4"
   }
 }
