--- a/.prettierrc
+++ b/.prettierrc
@@ -2,8 +2,9 @@
   "semi": true,
   "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
   "printWidth": 100,
+  "quoteProps": "as-needed",
+  "trailingComma": "es5",
   "bracketSpacing": true,
-  "arrowParens": "avoid"
+  "arrowParens": "always"
 }
