--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsdx watch --entry index.ts",
-    "build": "tsdx build --entry index.ts",
-    "prepare": "tsdx build --entry index.ts",
+    "start": "vite build --watch",
+    "build": "vite build",
+    "prepare": "vite build",
     "lint": "eslint . --ext .ts --fix",
     "lint:check": "eslint . --ext .ts",
     "format": "prettier --write .",
@@ -22,11 +22,9 @@
     "@solana/spl-token": "0.4.13",
     "@solana/web3.js": "1.98.4",
     "bs58": "^6.0.0",
-    "lodash": "^4.17.21",
-    "tsdx": "^0.14.1"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.20",
     "@types/node": "^22.18.3",
     "@typescript-eslint/eslint-plugin": "^8.44.0",
@@ -35,6 +33,8 @@
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
     "typescript": "^5.9.2",
+    "vite": "^7.1.5",
+    "vite-plugin-dts": "^4.5.4",
     "vitest": "^3.2.4"
   }
 }
