--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,4 @@
 # Test Environment Configuration
 # Update RPC_URL to be used for /tests (pnpm test)
-RPC_URL="https://mainnet.helius-rpc.com/?api-key=05175842-4364-4cd0-ba71-e6fec5fda883"
-DEVNET_RPC_URL="https://devnet.helius-rpc.com/?api-key=05175842-4364-4cd0-ba71-e6fec5fda883"
+RPC_URL=""
+DEVNET_RPC_URL=""
