--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "format:check": "prettier --check .",
     "fix": "prettier --write . && eslint . --ext .ts --fix",
     "test": "vitest",
-    "test:clean": "rm -rf test-data"
+    "test:cleanup": "vitest run src/tests/integration/batch-close-positions.test.ts --reporter=verbose"
+
   },
   "author": "Saros Finance",
   "license": "ISC",
