--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,10 @@
 {
   "semi": true,
+  "singleQuote": true,
   "tabWidth": 2,
-  "trailingComma": "all",
-  "printWidth": 100,
-  "endOfLine": "lf"
+  "printWidth": 120,
+  "quoteProps": "as-needed",
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
