--- a/.env.test
+++ b/.env.test
@@ -1,4 +1,3 @@
-# Test Environment Configuration
-# Update RPC_URL to be used for /tests (pnpm test)
+# RPC URLs for tests
 RPC_URL=""
 DEVNET_RPC_URL=""
