feat: implement user reward

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@saros-finance/dlmm-sdk",
-  "version": "1.4.0",
+  "version": "2.0.0",
   "type": "module",
   "description": "Saros DLMM (Dynamic Liquidity Market Maker) - the engine that powers the Internet Capital Market on Solana.",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
   },
